prevent single page text overflow

--- a/assets/sass/pages/_single.scss
+++ b/assets/sass/pages/_single.scss
@@ -2,6 +2,7 @@
   padding: 1rem;
   position: relative;
   width: 100%;
+  overflow-wrap: break-word;
 
   &__title {
     font-size: 2.5rem;
